begin documenting api
